fix word breaks in long titles
(cherry picked from commit af1437cde930ed95360b2fc33899d2be8099a2b8)

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1104,7 +1104,7 @@ form > .mb-3.required > label:after {
 
 .post_teaser_title_a {
   color: var(--bs-link-color);
-  word-break: break-word;
+  overflow-wrap: break-word;
 }
 .post_teaser_title_a:visited {
   color: color-mix(in srgb, var(--bs-link-color) 65%, white);
